src/widgets/snapshots/widgets__footer_test__test_menu_event_edit_mode.snap
---
source: src/widgets/test_utils.rs
expression: t.backend()
---
" m hide menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
" screens      1 countdown   2 timer   3 pomodoro   4 event   5 local time   ← or → switch screens                       "
" appearance   , change style   . toggle deciseconds   : toggle local time                                               "
" controls     enter save changes   esc skip changes   tab switch input                                                  "
"                                                                                                                        "
"                                                                                                                        "
