src/widgets/snapshots/widgets__footer_test__test_menu_hidden.snap
---
source: src/widgets/test_utils.rs
expression: t.backend()
---
" m show menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
