src/widgets/snapshots/widgets__footer_test__test_menu_local_time.snap
---
source: src/widgets/test_utils.rs
expression: t.backend()
---
" m hide menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
" screens      1 countdown   2 timer   3 pomodoro   4 event   5 local time   ← or → switch screens                       "
" appearance   , change style   . toggle deciseconds   : toggle local time                                               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
